# vm

./: .gitignore  CMakeLists.txt  Doxyfile_enhanced  README.md  build_docs.sh  conventions.md  doxy.txt  serve_docs.py  setup_docs.sh
docs/markdown/: architecture.md  performance.md
docs/templates/: header.html
documentation/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  architecture.html  architecture_8md.html  classes.html  debug_8c.html  debug_8c_source.html  dir_000000_000012.html  dir_000001_000003.html  dir_000004_000012.html  dir_000005_000003.html  dir_000008_000012.html  dir_000009_000003.html  dir_000010_000012.html  dir_000011_000003.html  dir_000013_000003.html  dir_007ad4948e580287e9d3cd339e78f152.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_313caf1132e152dd9b58bea13a4052ca_dep.dot  dir_31f1a79d6902317d51177998ddddaa64.html  dir_31f1a79d6902317d51177998ddddaa64.js  dir_31f1a79d6902317d51177998ddddaa64_dep.dot  dir_3454632d1a606e9a309cdaae2c26d5ae.html  dir_3454632d1a606e9a309cdaae2c26d5ae.js  dir_3454632d1a606e9a309cdaae2c26d5ae_dep.dot  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_80d9a72a764e34362c8238d6d43b55a0.html  dir_80d9a72a764e34362c8238d6d43b55a0.js  dir_80d9a72a764e34362c8238d6d43b55a0_dep.dot  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  dir_821002d4f10779a80d4fb17bc32f21f1_dep.dot  dir_83bcfdd37b6a0a7024e855b62c65c6f4.html  dir_83bcfdd37b6a0a7024e855b62c65c6f4.js  dir_860c11998a3807e839f8c74cce4c2bd1.html  (+422 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_19.js  all_1b.js  all_1c.js  all_1e.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  (+88 more)
documentation/latex/: annotated.tex  debug_8c.tex  dir_313caf1132e152dd9b58bea13a4052ca.tex  dir_31f1a79d6902317d51177998ddddaa64.tex  dir_3454632d1a606e9a309cdaae2c26d5ae.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_80d9a72a764e34362c8238d6d43b55a0.tex  dir_821002d4f10779a80d4fb17bc32f21f1.tex  dir_8661c181a5e32e4691154f1e13423251.tex  dir_c872b3ec0fdcebb92c34055849b8d672.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d9321f454a1ab8213e20ed95d57a323f.tex  dir_ead72e6a73c54f9e231e4ea6dcf5032a.tex  dir_f56a3a135a8a10a38ba6cf6e5eb74c45.tex  disk_8c.tex  disk_8h.tex  disk_8h_source.tex  files.tex  foo_8h_source.tex  globals_8h.tex  globals_8h_source.tex  init_8c.tex  init_8h.tex  init_8h_source.tex  init__threads_8c.tex  init__threads_8h.tex  init__threads_8h_source.tex  macros_8h.tex  macros_8h_source.tex  md_conventions.tex  page__utils_8c.tex  page__utils_8h.tex  page__utils_8h_source.tex  pte__utils_8c.tex  pte__utils_8h.tex  pte__utils_8h_source.tex  random__utils_8c.tex  random__utils_8h.tex  random__utils_8h_source.tex  refman.tex  (+39 more)
images/: .$figure1vector.svg.bkp
include/: disk.h  init.h  macros.h  pages.h  util.h  vm.h
include/disk/: disk.h
include/initialization/: init.h  init_threads.h
include/threads/: ager_thread.h  scheduler_thread.h  statistics.h  trimmer_thread.h  user_free.h  user_thread.h  writer_thread.h  zero_thread.h
include/utils/: page_utils.h  pte_regions_utils.h  pte_utils.h  random_utils.h  statistics_utils.h  thread_utils.h
include/variables/: globals.h  macros.h  structures.h
src/: debug.c  disk.c  init.c  pages.c  threads.c  util.c  vm.c
src/disk/: disk.c
src/initialization/: init.c  init_threads.c
src/threads/: ager_thread.c  scheduler_thread.c  statistics.c  trimmer_thread.c  user_free.c  user_thread.c  writer_thread.c  zero_thread.c
src/utils/: page_utils.c  pte_regions_utils.c  pte_utils.c  random_utils.c  statistics_utils.c  thread_utils.c  util.c
src/vm/: vm.c
